--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Site settings
-title: 博客名字 # 你的博客名字，可以定义修订
+title: Mr.S的实验室 # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "这是我的博客"  # 一句话描述你的博客
+description: "草创未就，持续更新……"  # 一句话描述你的博客
 baseurl: ""
-url: "http://cnfeat"  # 此处填写你的博客地址 
+url: "http://shymuel2018.com"  # 此处填写你的博客地址 
 
 # About/contact
 owner: 
-  name: "作者名字" # 填写作者信息：名字
-  email: X@gmail.com # 填写作者信息：邮箱
-  bio: "你的博客描述" # 填写作者信息：博客描述
+  name: "shymuel" # 填写作者信息：名字
+  email: shymuel1998@163.com # 填写作者信息：邮箱
+  bio: "伪科技宅" # 填写作者信息：博客描述
 
 # Data
 gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
-douban_username:  # 你的豆瓣id
+douban_username:  竹夭 # 你的豆瓣id
 twitter_username: 
-github_username: 
+github_username: shymuel
 facebook_username: 
 weibo_username: 
 zhihu_username: 
@@ -43,7 +43,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "你的名字" # 你的名字
+      author: "shymuel" # 你的名字
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
