--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: # 你的博客名字，可以定义修订
+title: "Mr.S的实验室"# 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: ""  # 一句话描述你的博客
+description: "草创未就，持续更新。"  # 一句话描述你的博客
 baseurl: ""
-url: ""  # 此处填写你的博客地址 
+url: "www.shymuel2018.com"  # 此处填写你的博客地址 
 
 # About/contact
 owner: 
-  name: "" # 填写作者信息：名字
+  name: "shymuel" # 填写作者信息：名字
   email:  # 填写作者信息：邮箱
   bio: "" # 填写作者信息：博客描述
 
@@ -43,7 +43,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "" # 你的名字
+      author: "shymuel" # 你的名字
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
